# portfolio-itmo

./: README.md
projects/01-mpc-cluster/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
projects/01-mpc-cluster/migrations/: 002_create_rounds.sql  003_create_nodes.sql
projects/02-wallet-scoring/: README.md  docker-compose.yml  go.mod  go.sum
projects/02-wallet-scoring/migrations/: 001_create_transactions.sql  002_create_wallet_stats.sql  003_create_token_scores.sql  004_create_score_history.sql  005_create_alerts.sql
projects/02-wallet-scoring/ml/: Dockerfile  cli.py  config.py  db.py  requirements.txt
projects/03-cfa-bonds/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
projects/03-cfa-bonds/deploy/: prometheus.yml
projects/03-cfa-bonds/migrations/: 002_create_investors.sql  006_create_trades.sql  008_create_analytics_views.sql
projects/04-t-vygoda/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
projects/04-t-vygoda/migrations/: 001_create_users.sql  002_create_categories.sql  003_create_partners.sql  004_create_promos.sql  005_create_posts.sql  006_create_purchases.sql  (+6 more)
projects/05-anomaly-detection/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
projects/06-orderflow-intelligence/: README.md  docker-compose.yml  go.mod  go.sum
projects/07-portfolio-reports/: README.md  docker-compose.yml  go.mod  go.sum
projects/08-matching-engine/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
projects/08-matching-engine/src/benchmark/: CMakeLists.txt  main.cpp
projects/08-matching-engine/src/engine/: CMakeLists.txt  matching_engine.cpp  matching_engine.hpp  order.cpp  order.hpp  order_book.cpp  order_book.hpp  price_level.cpp  price_level.hpp  trade.hpp  types.hpp
projects/08-matching-engine/src/server/: CMakeLists.txt  main.cpp  protocol.cpp  protocol.hpp  session.cpp  session.hpp  tcp_server.cpp  tcp_server.hpp
projects/08-matching-engine/tests/: CMakeLists.txt  test_matching.cpp  test_order_book.cpp  test_protocol.cpp
projects/09-load-balancer/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
projects/09-load-balancer/config/: example.conf
projects/09-load-balancer/src/balancer/: CMakeLists.txt  backend.cpp  backend.hpp  backend_pool.cpp  backend_pool.hpp  health_checker.cpp  health_checker.hpp  ip_hash.cpp  ip_hash.hpp  least_connections.cpp  least_connections.hpp  round_robin.cpp  round_robin.hpp  strategy.cpp  strategy.hpp  weighted.cpp  weighted.hpp
projects/09-load-balancer/src/benchmark/: CMakeLists.txt  main.cpp
projects/09-load-balancer/src/core/: CMakeLists.txt  config.cpp  config.hpp  logger.cpp  logger.hpp  signal_handler.cpp  signal_handler.hpp  types.hpp
projects/09-load-balancer/src/metrics/: CMakeLists.txt  collector.cpp  collector.hpp  prometheus.cpp  prometheus.hpp
projects/09-load-balancer/src/net/: CMakeLists.txt  address.cpp  address.hpp  buffer.cpp  buffer.hpp  epoll.cpp  epoll.hpp  socket.cpp  socket.hpp
projects/09-load-balancer/src/proxy/: CMakeLists.txt  connection.cpp  connection.hpp  proxy_engine.cpp  proxy_engine.hpp
projects/09-load-balancer/src/reload/: CMakeLists.txt  config_watcher.cpp  config_watcher.hpp
projects/09-load-balancer/src/server/: CMakeLists.txt  main.cpp
projects/09-load-balancer/tests/: CMakeLists.txt  test_address.cpp  test_buffer.cpp  test_config.cpp  test_health_checker.cpp  test_ip_hash.cpp  test_least_conn.cpp  test_proxy_integration.cpp  test_round_robin.cpp  test_weighted.cpp
projects/10-distributed-kv/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
(+391 files in other folders)
